<resources>
    <string name="app_name">MyBluetoothSensor</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="connection_str">Not Connected</string>
    <string name="connect_button_str">Connect</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="radio_button_1">10 ms</string>
    <string name="radio_button_2">20 ms</string>
    <string name="radio_button_3">50 ms</string>
</resources>