<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/connection_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent">

    <TextView
        android:id="@+id/connection_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="20dp"
        android:text="@string/connection_str" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/connect_button_str"/>
</LinearLayout>

    <Switch
        android:id="@+id/acc_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelerometer"
        android:layout_marginTop="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection_layout" />

    <Switch
        android:id="@+id/gyro_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gyroscope"
        android:layout_marginTop="30dp"
        android:layout_marginRight="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acc_switch" />

<RadioGroup
    android:id="@+id/sending_rate_radio"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="90dp"
    android:layout_marginLeft="25dp"
    app:layout_constraintTop_toBottomOf="@id/connection_layout"
    app:layout_constraintLeft_toRightOf="@id/acc_switch">

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_button_1" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_button_2" />
    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_button_3" />

</RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>